Addtl. minor responsive fix for dark mode

--- a/resources/css/components/announcement.css
+++ b/resources/css/components/announcement.css
@@ -103,7 +103,7 @@
     }
 
     [data-theme="dark"] .announcement__container svg path {
-        stroke: var(--c-blue-500);
+        stroke: var(--c-blue-400);
     }
 }
 
@@ -122,6 +122,22 @@
 
     .announcement__container > svg {
         width: 24px;
+    }
+
+    .announcement__svg__container {
+        padding: 6px;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    [data-theme="dark"] .announcement__svg__container {
+        background-color: var(--c-blue-800);
+    }
+
+    [data-theme="dark"] .announcement__svg__container {
+        
     }
 }
 
